--- a/thetube/package.json
+++ b/thetube/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^10.11.1",
     "next": "14.2.3",
+    "next-cloudinary": "^6.5.2",
     "react": "^18",
     "react-dom": "^18"
   },
